--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A personal website",
   "main": "host.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node host.js",
+    "start": "npm start"
   },
   "repository": {
     "type": "git",
